# backend_samdino

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: default.docker.cpu.yaml  default.docker.gpu.yaml  default.yaml  new_azure_file.md  schema.py
docs/: architecture.md  setup.md  ui-fix-changelog.md
hitl/: __init__.py  _models_build.py  app.py
hitl/api/: __init__.py  dataset.py  deps.py  inference.py  labels.py  models.py  preview.py  projects.py  raster.py  sam.py  session.py  training.py
hitl/dashboard/: __init__.py  app.py
hitl/data/: __init__.py  dataset_builder.py  label_store.py  project_manager.py  raster_source.py  tile_dataset.py  transforms.py  xyz_fetcher.py
hitl/inference/: __init__.py  exporter.py  stitcher.py  tiler.py
hitl/models/: __init__.py  backbone.py  neck.py  registry.py  segmentor.py  upernet.py
hitl/services/: __init__.py  gpu_manager.py  inference_service.py  preview_service.py  sam_service.py  train_service.py
hitl/utils/: geo.py  logging.py
scripts/: download_models.py
scripts/aca/: 01_setup_once.cmd  02_upload_data.cmd  03_deploy.cmd  README.md
tests/: test_e2e_pipeline.py
